# Cloud-Task-Scheduler

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: getting_started.md
src/: __init__.py  cli.py
src/scheduler/: __init__.py  models.py  nsga2.py  visualization.py
tests/: test_nsga2.py
